--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
-project(Shop_hyina_)
+project(Shop)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Shop_hyina_ main.cpp shop.cpp shop.h shop_list.cpp shop_list.h exceptions.h)
+add_executable(Shop main.cpp shop.cpp shop.h shop_list.cpp shop_list.h exceptions.h)
