--- a/Bank/CMakeLists.txt
+++ b/Bank/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Bank)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Bank main.cpp bank.cpp bank.h client.cpp client.h accounts/account.cpp accounts/account.h accounts/debit.cpp accounts/debit.h accounts/deposit.cpp accounts/deposit.h accounts/credit.cpp accounts/credit.h)
+add_executable(Bank main.cpp bank.cpp bank.h client.cpp client.h accounts/account.cpp accounts/account.h accounts/debit.cpp accounts/debit.h accounts/deposit.cpp accounts/deposit.h accounts/credit.cpp accounts/credit.h constructor.cpp constructor.h)
